# try-poetry

./: README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
project/: pyproject.toml
project/src/project/: __main__.py
project/src/project/schemas/: sample_schema.py
project/tests/: test_main.py
project02/: pyproject.toml  sample01.ipynb
